# cvpa

./: .gitignore  README.md  black.sh  build-pyinstaller.sh  flake8.sh  isort.sh  main.py  mypy.sh  protocolization.sh  pyproject.toml  pytest.ini  pytest.sh  python  run
.claude/: settings.json
.claude/skills/python-conventions/: SKILL.md
.github/workflows/: python-deploy.yml  python-test.yml
docs/: ros2-integration-plan.md
docs/plans/: modbus-robot-simulator.md
src/cvpa/: __init__.py  __main__.py  arguments.py  entrypoint.py  main.py  variables.py
src/cvpa/apps/: __init__.py  base.py  idle.py
tester/: test_aio_shield_any.py  test_apps_agent_app.py  test_apps_agent_client.py  test_arguments.py  test_colors_convert_imgui.py  test_colors_xterm.py  test_entrypoint.py  test_logging_formatters_colored.py  test_logging_handlers_file.py  test_logging_loggers.py  test_logging_mpv.py  test_logging_names.py  test_logging_profile.py  test_logging_records_formatted.py  test_logging_variables.py  test_service_manager.py  test_service_process.py  test_service_server.py  test_system_conf.py  test_system_environ.py  test_system_platform.py  test_system_shell.py  test_types_annotations.py  test_types_colors.py  test_types_dataclass_field_default.py  test_types_dataclass_public_copy.py  test_types_enum_normalize_number.py  test_types_matcher_base.py  test_types_matcher_mapper.py  test_types_override.py  test_types_shapes.py  test_variables.py  test_ws_client.py
tester/aio/: test_run.py
tester/apps/: test_base.py  test_init.py
tester/asserts/: test_init.py
tester/client/: test_ticket.py
tester/credentials/: test_token.py
tester/logging/: test_disable.py  test_logging.py  test_profile.py  test_styles.py
tester/palette/: test_data.py  test_init.py
tester/service/: test_base.py
tester/system/: test_conf.py  test_environ_keys.py
tester/types/: test_form.py
tester/ws/: test_agent_connection.py  test_client.py  test_connection.py  test_handler.py  test_protocol.py
(+86 files in other folders)
